[package]
name = "rmosse"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
nalgebra = "0.33.2"
rustfft = "6.2.0"
image = "0.25.6"
rayon = "1.10.0"

[profile.release]
overflow-checks = false
incremental = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
lto = "thin"